--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,19 +6,8 @@ SET(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable")
 
-add_library(${PROJECT_NAME} SHARED
-        crypto-hash/sha1.cpp
-        crypto-hash/sha256.cpp
-        crypto-hash/sha512.cpp
-        crypto-hash/ripemd160.cpp
-        crypto-hash/chacha20.cpp
-        crypto-hash/hmac_sha256.cpp
-        crypto-hash/hmac_sha512.cpp
-        )
-
-include(CheckIncludeFileCXX)
-
 # Check if file endian.h, byteswap.h, sys/endian.h exist.
+include(CheckIncludeFileCXX)
 CHECK_INCLUDE_FILE_CXX("endian.h" HAVE_ENDIAN_H)
 CHECK_INCLUDE_FILE_CXX("byteswap.h" HAVE_BYTESWAP_H)
 CHECK_INCLUDE_FILE_CXX("sys/endian.h" HAVE_SYS_ENDIAN_H)
@@ -35,3 +24,16 @@ if(HAVE_SYS_ENDIAN_H EQUAL 1)
     target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_SYS_ENDIAN_H)
 endif()
 # End check
+
+add_library(${PROJECT_NAME} SHARED
+        crypto-hash/sha1.cpp
+        crypto-hash/sha256.cpp
+        crypto-hash/sha512.cpp
+        crypto-hash/hash160.cpp
+        crypto-hash/hash256.cpp
+        crypto-hash/ripemd160.cpp
+        crypto-hash/chacha20.cpp
+        crypto-hash/hmac_sha256.cpp
+        crypto-hash/hmac_sha512.cpp
+        )
+
