Update README.md; Update Install Script

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,3 @@
-cmake_minimum_required(VERSION 3.10)
-project(CryptoHash)
-
-set(CMAKE_CXX_STANDARD 11)
-SET(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable")
-
 # Check if file endian.h, byteswap.h, sys/endian.h exist.
 include(CheckIncludeFileCXX)
 CHECK_INCLUDE_FILE_CXX("endian.h" HAVE_ENDIAN_H)
@@ -13,19 +5,19 @@ CHECK_INCLUDE_FILE_CXX("byteswap.h" HAVE_BYTESWAP_H)
 CHECK_INCLUDE_FILE_CXX("sys/endian.h" HAVE_SYS_ENDIAN_H)
 
 if(HAVE_ENDIAN_H EQUAL 1)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_ENDIAN_H)
+    target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_ENDIAN_H)
 endif()
 
 if(HAVE_BYTESWAP_H EQUAL 1)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_BYTESWAP_H)
+    target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_BYTESWAP_H)
 endif()
 
 if(HAVE_SYS_ENDIAN_H EQUAL 1)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE HAVE_SYS_ENDIAN_H)
+    target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE HAVE_SYS_ENDIAN_H)
 endif()
 # End check
 
-add_library(${PROJECT_NAME} SHARED
+add_library(${CMAKE_PROJECT_NAME} SHARED
         crypto-hash/sha1.cpp
         crypto-hash/sha256.cpp
         crypto-hash/sha512.cpp
