--- a/cmake/CryptoHashConfig.cmake.in
+++ b/cmake/CryptoHashConfig.cmake.in
@@ -1,14 +1,13 @@
 include(CMakeFindDependencyMacro)
 @CryptoHash_FIND_DEPENDENCY_CALLS@
 include("${CMAKE_CURRENT_LIST_DIR}/@exported_targets_filename@")
-message(STATUS "CryptoHash_DIR = ${CryptoHash_DIR}")
-message(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
 
 @PACKAGE_INIT@
 set_and_check(CryptoHash_INCLUDE_DIR  "${CMAKE_INSTALL_PREFIX}/include/safeheron")
 set_and_check(CryptoHash_INCLUDE_DIRS "${CMAKE_INSTALL_PREFIX}/include/safeheron")
 set_and_check(CryptoHash_LIBRARY_DIR "${CMAKE_INSTALL_PREFIX}/lib")
 
+MESSAGE(STATUS "###################################")
 MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")
 
 IF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
