--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,15 @@
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE
+        crypto-hash/sha1.cpp
+        crypto-hash/sha256.cpp
+        crypto-hash/sha512.cpp
+        crypto-hash/hash160.cpp
+        crypto-hash/hash256.cpp
+        crypto-hash/ripemd160.cpp
+        crypto-hash/chacha20.cpp
+        crypto-hash/hmac_sha256.cpp
+        crypto-hash/hmac_sha512.cpp
+        )
+
 # Check if file endian.h, byteswap.h, sys/endian.h exist.
 include(CheckIncludeFileCXX)
 CHECK_INCLUDE_FILE_CXX("endian.h" HAVE_ENDIAN_H)
@@ -17,15 +29,4 @@ if(HAVE_SYS_ENDIAN_H EQUAL 1)
 endif()
 # End check
 
-add_library(${CMAKE_PROJECT_NAME} SHARED
-        crypto-hash/sha1.cpp
-        crypto-hash/sha256.cpp
-        crypto-hash/sha512.cpp
-        crypto-hash/hash160.cpp
-        crypto-hash/hash256.cpp
-        crypto-hash/ripemd160.cpp
-        crypto-hash/chacha20.cpp
-        crypto-hash/hmac_sha256.cpp
-        crypto-hash/hmac_sha512.cpp
-        )
 
