--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,20 @@
 find_package(GTest REQUIRED)
 
+include_directories("../src"
+        ${GTEST_INCLUDE_DIRS})
+
+option(ENABLE_ASSEMBLE "Enable assemble" OFF)
+if (NOT ${ENABLE_ASSEMBLE})
+    link_libraries(CryptoHash
+            ${GTEST_BOTH_LIBRARIES}
+            ${PROTOBUF_LIBRARY_DIRS}
+            pthread )
+else()
+    link_libraries(${CMAKE_PROJECT_NAME}
+            ${GTEST_BOTH_LIBRARIES}
+            ${PROTOBUF_LIBRARY_DIRS}
+            pthread )
+endif()
+
 add_executable(hash-test hash-test.cpp)
-target_include_directories(hash-test PRIVATE
-        "../src"
-        ${GTEST_INCLUDE_DIRS}
-        )
-target_link_libraries( hash-test
-        CryptoHash
-        ${GTEST_BOTH_LIBRARIES}
-        pthread )
 add_test(NAME hash-test COMMAND hash-test)
